k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bikerental
  labels:
    name: bikerental
    app: bikerental
