k8s/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-headless
  namespace: bikerental
  labels:
    app: bikerental
    component: mongo
spec:
  clusterIP: None
  selector:
    app: bikerental
    component: mongo
  ports:
  - port: 27017
    targetPort: 27017
    name: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: bikerental
  labels:
    app: bikerental
    component: mongo
spec:
  selector:
    app: bikerental
    component: mongo
  ports:
  - port: 27017
    targetPort: 27017
    name: mongo
